k8s/istio/istiogateway.yml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: sbms-gateway
spec:
  gatewayClassName: istio
  listeners:
    - name: http
      port: 9000
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: Same
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: sbms-route
spec:
  parentRefs:
    - name: sbms-gateway
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /api
        - path:
            type: Exact
            value: /actuator/health
        - path:
            type: Exact
            value: /product/actuator/health
        - path:
            type: Exact
            value: /order/actuator/health
        - path:
            type: Exact
            value: /inventory/actuator/health
      backendRefs:
        - name: api-gateway
          port: 9000
        - name: product-service
          port: 8080
---
